<resources>
    <string name="app_name">Rent A Car Management</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_logout">Salir</string>
    <string name="menu_booking">Reservas</string>
    <string name="menu_cars">Autos</string>
    <string name="menu_slideshow">Slideshow</string>

    <!--MENU-->
    <string name="action_search">Search</string>
    <string name="action_create">Create</string>
    <!--CAR-->
    <string name="search_hint">Buscar por marca</string>
    <string name="image_description">Auto</string>
    <string name="image_arrow">Flecha</string>
    <string name="menu_popup_show_title">Ver</string>
    <string name="menu_popup_edit_title">Editar</string>
    <string name="menu_popup_delete_title">Eliminar</string>
    <string name="delete_car_message_dialog">Desea eliminar el auto?</string>
    <string name="accept_title">Aceptar</string>
    <string name="cancel_title">cancelar</string>
    <string name="brand_title">Marca</string>
    <string name="color_title">Color</string>
    <string name="model_title">Modelo</string>
    <string name="patent_title">Patente</string>
    <string name="car_added_success">Auto adicionado correctamente</string>
    <string name="car_updated_success">Auto actualizado correctamente</string>
    <string name="car_added_error">Problemas al adicionar el auto</string>
    <string name="car_updated_error">Problemas al actualizar el auto</string>
    <string name="insert_comment_car">Ingrese comentario / descripción</string>
    <string name="insert_patent_car">Ingrese la patente *</string>
    <string name="insert_model_car">Ingrese el modelo *</string>
    <!--COMMON-->
    <string name="required_data_error">Dato obligatorio</string>
    <string name="required_datas_error">Datos obligatorios vacios</string>
    <string name="create_title">Crear</string>
    <string name="update_title">Actualizar</string>
    <string name="error_description">Error</string>
    <string name="generic_error_text">Tuvimos un problemas, intenta nuevamente.</string>
    <string name="unknown_error_text">Tuvimos un problemas desconocido.</string>
    <!--BOOKING-->
    <string name="delete_booking_message_dialog">Desea eliminar la reserva?</string>
    <string name="booking_added_success">Reserva adicionada correctamente</string>
    <string name="booking_updated_success">Reserva actualizada correctamente</string>
    <string name="booking_added_error">Problemas al adicionar la reserva</string>
    <string name="booking_updated_error">Problemas al actualizar la reserva</string>
    <string name="show_all_title">mostrar todos</string>
    <string name="car_title">Auto</string>
    <string name="insert_driving_licence">Ingrese la licencia *</string>
    <string name="insert_fly_number">Ingrese el vuelo *</string>
    <string name="insert_hotel">Ingrese el hotel *</string>
    <string name="insert_return_place">Ingrese lugar de devolución *</string>
    <string name="insert_price">Ingrese precio</string>
    <string name="insert_commission">Ingrese comisión</string>
    <string name="date_ranger">Periodo</string>
    <string name="delivery_date">Hora entrega</string>
    <string name="return_date">Hora devolución</string>
    <string name="licence_title">Licencia</string>
    <string name="fly_title">Vuelo</string>
    <string name="hotel_title">Hotel</string>
    <string name="price_title">Precio</string>
    <string name="commission_title">Comisión</string>
    <string name="return_place_title">Lugar de devolución</string>
    <string name="delivery_place_title">Lugar de entrega</string>
    <string name="comment_title">Comentario</string>
    <string name="prompt_email">Nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="enter_login">Entrar</string>

    <!--LOGIN-->
    <string name="invalid_credentials_error">Credenciales invalidas, verifique sus datos</string>
    <string name="save_user_error">Problemas al guardar sus datos. Intente nuevamente.</string>

    <!--USER-->
    <string name="menu_user">Usuario</string>
    <string name="delete_user_message_dialog">Desea eliminar el usuario?</string>
    <string name="user_name_title">Nombre del usuario</string>
    <string name="pass_title">Contraseña del usuario</string>
    <string name="type_title">Tipo de usuario</string>
    <string name="user_added_success">Usuario adicionado correctamente</string>
    <string name="user_updated_success">Usuario actualizado correctamente</string>
    <string name="user_added_error">Problemas al adicionar el usuario</string>
    <string name="user_updated_error">Problemas al actualizar el usuario</string>
    <string name="image_user_description">Usuario</string>
</resources>