<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_booking">

    <fragment
        android:id="@+id/nav_booking"
        android:name="com.leandroid.system.rentacarmanagement.ui.booking.BookingFragment"
        android:label="@string/menu_booking"
        tools:layout="@layout/fragment_booking" />

    <fragment
        android:id="@+id/nav_car"
        android:name="com.leandroid.system.rentacarmanagement.ui.car.CarFragment"
        android:label="@string/menu_cars"
        tools:layout="@layout/fragment_car" />

    <fragment
        android:id="@+id/nav_user"
        android:name="com.leandroid.system.rentacarmanagement.ui.user.UserFragment"
        android:label="@string/menu_user"
        tools:layout="@layout/fragment_user" />
</navigation>